Gatsby: fix vaccination colour contrast

--- a/gatsby/src/components/guide/guide.module.scss
+++ b/gatsby/src/components/guide/guide.module.scss
@@ -15,7 +15,7 @@
   }
 
   &--green {
-    background-color: #1b9b2c;
+    background-color: #0b891c;
   }
 
   // desktop
@@ -52,7 +52,7 @@
   }
 
   &--green {
-    color: #1b9b2c !important;
+    color: #0b891c !important;
   }
 }
 
